==> donginhb/GCP-MulitMCUs/HwPlatform/STM32F0XX/HwDrivers/HW_Uart.c <==
#include "HW_Uart.h"
#include "HW_IRQHandler.h"
#include "HW_Gpio.h"
#include "chip.h"
#include "ring_buffer.h"
#include <string.h>
#include <stdlib.h>
#define SL_ASSERT(x)
#define APB2_FCLK (48*1000000)
#define USARTx_GET_BRR(Fpclk,BaudRate)  \
    (((uint16_t)((Fpclk)/(16*(BaudRate)))<<4) | \
    ((uint8_t)((((Fpclk)/(16.0*(BaudRate))) - (uint16_t)((Fpclk)/(16*(BaudRate))))*16)))
#define RBUF_SIZE   (64)    /*** Must be a power of 2 (2,4,8,16,32,64,128,256,512,...) ***/
#define UART_RB_SIZE    (64)

static void HW_UART_DmaTxInit(uint8_t uUartNode)
{
    //开时钟
    RCC->AHBENR |= (0X1<<0);  //DMA1时钟使能 
    
    //配置工作模式
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X1<<14);  //非内存-内存模式
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X3<<12);
    USART_TxDmaChannel[uUartNode]->CCR |=  (0X1<<12);  //中等优先级
    
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X3<<10);
    USART_TxDmaChannel[uUartNode]->CCR |=  (0X0<<10);  //内存:8位数据帧格式
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X3<<8);
    USART_TxDmaChannel[uUartNode]->CCR |=  (0X0<<8);   //外设:8位数据帧格式
    
    USART_TxDmaChannel[uUartNode]->CCR |=  (0X1<<7);   //内存增量模式
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X1<<6);   //外设非增量模式
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X1<<5);   //非循环模式
    USART_TxDmaChannel[uUartNode]->CCR |=  (0X1<<4);   //从内存中读
    
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X1<<3);   //关闭错误中断
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X1<<2);   //关闭半传输中断
    USART_TxDmaChannel[uUartNode]->CCR |=  (0X1<<1);   //开传输完成中断
    
    NVIC_SetPriority(USART_DMA_IRQn[uUartNode], 2);
    NVIC_EnableIRQ(USART_DMA_IRQn[uUartNode]); //开内核中断
    
    //配置外设地址
    USART_TxDmaChannel[uUartNode]->CPAR = (uint32_t)&(USART[uUartNode]->TDR);
    
    //关闭通道
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X1<<0);   //关闭通道,在开启接受/发送时再启动
    
}

void HW_UART_Init(uint8_t uUartNode, uint32_t ulBaudRate)
{
    //判断入参
    if (uUartNode >= HW_UART_NODE_NUM)
    {
        return;
    }
    
    //设置中断回调
    HW_UART_ConfigItCallBack(uUartNode);
    
    //初始化环形FIFO
    RingBuffer_Init(&m_RxRing[uUartNode], m_uRxBuff[uUartNode], 1, UART_RB_SIZE);
    
    //配置引脚
    HW_UART_IOConfig(uUartNode);
    
    //配置工作模式
    HW_UART_ModeConfig(uUartNode, ulBaudRate);
    
    //配置DMA
    HW_UART_DmaRxInit(uUartNode);
    HW_UART_DmaTxInit(uUartNode);
    
}

static UART_TX_NODE **List_GetHead(uint8_t uUartNode)
{
    UART_TX_NODE **pHeadNode = NULL;

    switch (uUartNode)
    {
    case HW_UART_NODE0: pHeadNode = &g_HeadNodePtr0; break;
    case HW_UART_NODE1: pHeadNode = &g_HeadNodePtr1; break;
    default: break;
    }

    return pHeadNode;
}

static void HW_UART_DmaSend(uint8_t uUartNode, uint8_t *pSBuff, uint32_t ulSize)
{
    //等待串口上轮发送完成
    while (!(USART[uUartNode]->ISR & (1<<6)));
    
    //关闭通道
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X1<<0);
    
    //配置内存地址
    USART_TxDmaChannel[uUartNode]->CMAR = (uint32_t)pSBuff;
    
    //配置发送数量
    USART_TxDmaChannel[uUartNode]->CNDTR = ulSize;
    
    //启动传输
    USART_TxDmaChannel[uUartNode]->CCR |=  (0X1<<0);
    
    
}

static void HW_UART0_RX_IRQHandler(void)
{
    uint16_t nUart1RecvCnt = 0;  //存储当前接收到的数据的缓冲区长度
    
    //中断入口判断 */
    if (USART1->ISR & (0X1<<4))  //空闲帧中断入口
    {
        //清标志位 */
        USART1->ICR |= (0X1<<4);
        
        //计算接收到的帧长 */
        nUart1RecvCnt = RBUF_SIZE - DMA1_Channel3->CNDTR;
        
        //复位DMA */
        HW_UART_RxDMAReset(HW_UART_NODE0);
        
        //将数据存储入缓冲区
        RingBuffer_InsertMult(&m_RxRing[0], Uart1_RecvBuff, nUart1RecvCnt);
        
    }
}

static void HW_UART1_RX_IRQHandler(void)
{
    uint16_t nUart2RecvCnt = 0;  //存储当前接收到的数据的缓冲区长度
    
    //中断入口判断
    if (USART2->ISR & (0X1<<4))  //空闲帧中断入口
    {
        //清标志位
        USART2->ICR |= (0X1<<4);
        
        //计算接收到的帧长
        nUart2RecvCnt = RBUF_SIZE - DMA1_Channel5->CNDTR;
        
        //复位DMA
        HW_UART_RxDMAReset(HW_UART_NODE1);
        
        //将数据存储入缓冲区
        RingBuffer_InsertMult(&m_RxRing[1], Uart2_RecvBuff, nUart2RecvCnt);
        
    }
    
}
